--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature
-        android:name="android.hardware.telephony"
-        android:required="false" />
-
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
-
-    <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.MANAGE_OWN_CALLS" />
 
 <!--    Permissions required for ScreeningService-->
     <uses-permission android:name="android.permission.SCREEN_CALLS" />
@@ -41,42 +32,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <!-- Needed to tell Android we handle call intents -->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.DIAL" />-->
-<!--                <action android:name="android.intent.action.CALL" />-->
-<!--                <category android:name="android.intent.category.DEFAULT" />-->
-<!--                <data android:scheme="tel" />-->
-<!--            </intent-filter>-->
         </activity>
-
-        <activity android:name=".ui.DialerActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.CALL" />
-                <action android:name="android.intent.action.DIAL" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:scheme="tel" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.PICK_PHONE_ACCOUNT"/>
-                <action android:name="android.telecom.action.SHOW_CALL_ACCESSIBILITY_PANEL"/>
-            </intent-filter>
-        </activity>
-
-        <!-- InCallService -->
-
-        <service
-            android:name=".ui.MyInCallService"
-            android:permission="android.permission.BIND_INCALL_SERVICE"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.telecom.InCallService" />
-            </intent-filter>
-            <meta-data android:name="android.telecom.IN_CALL_SERVICE_UI" android:value="true" />
-            <meta-data android:name="android.telecom.IN_CALL_SERVICE_RINGING" android:value="true" />
-        </service>
 
         <service
             android:name=".ui.MyCallScreeningService"
@@ -87,37 +43,19 @@
             </intent-filter>
         </service>
 
-
-        <service
-            android:name=".ui.MyConnectionService"
-            android:permission="android.permission.BIND_TELECOM_CONNECTION_SERVICE"
-            android:exported="true">
+        <receiver
+            android:name=".ui.receiver.CallReceiver"
+            android:exported="false">
             <intent-filter>
-                <action android:name="android.telecom.ConnectionService" />
+                <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
-        </service>
-
-
-
-
-
-
-
-<!--                <receiver-->
-<!--            android:name=".ui.receiver.CallReceiver"-->
-<!--            android:exported="false">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.PHONE_STATE" />-->
-<!--            </intent-filter>-->
-<!--        </receiver>-->
+        </receiver>
 
         <service
             android:name=".ui.overlay.CallOverlayService"
             android:exported="false"
             android:foregroundServiceType="dataSync"
             />
-
-
 
     </application>
 
